--- a/Spring-starter/src/main/resources/application.properties
+++ b/Spring-starter/src/main/resources/application.properties
@@ -2,9 +2,9 @@ message.source.basename=i18n/messages
 
 #DB properties:
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/spring-starter?useUnicode=true&characterEncoding=UTF-8
-db.username=root
-db.password=
+db.url=jdbc:mysql://ec2-50-19-213-178.compute-1.amazonaws.com:3306/spring-starter?useUnicode=true&characterEncoding=UTF-8
+db.username=starter-usr
+db.password=starter-usr
 
 #Hibernate Configuration:
 hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
